tests/spec/pass/try_send_recv.aja
ch = chan()
print(trySend(ch, 1))
print(tryRecv(ch, 0))
print(tryRecv(ch, 7))
close(ch)
print(trySend(ch, 2))
