tests/spec/fail/list_mixed_types.aja
bad = [1, "x"]
print(bad)
